Renamed ALL "upgrade" strings to "update"
In general, "upgrade" is used for hardware, while "update" is used for software. E.g. when we put a new hard disk into a PC, we do a hardware upgrade, but when we install a newer version of a program, we do a software update.
In openpli, both words and their derivatives are used interchangeably while refering to software updates.

This commit converts all instances of "upgrade" and its derivatives to "update" and its corresponding derivatives and makes sure ALL translations will continue to work like before. For some languages, the translated strings are also updated.

--- a/po/sl.po
+++ b/po/sl.po
@@ -44,7 +44,7 @@ msgstr ""
 #
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Sprememba vira za nadgradnjo sprejemnika."
@@ -3397,7 +3397,7 @@ msgid "Do you want to update your receiver?"
 msgstr "Želite posodobiti vaš sprejemnik na zadnjo verzijo OpenPLi slike?"
 
 #
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Želite nadgraditi paket:\n"
 
 msgid "Dolby"
@@ -3430,8 +3430,8 @@ msgstr ""
 
 #
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Končano - nameščen, nadgrajen ali izbrisan je bil %d paket (%s)."
 msgstr[1] "Končano - nameščena, nadgrajena ali izbrisana sta bila %d paketa (%s)."
 msgstr[2] "Končano - nameščeni, nadgrajeni ali izbrisani so bili %d paketi (%s)."
@@ -3566,7 +3566,7 @@ msgid "Edit title"
 msgstr "Spremenite naslov"
 
 #
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "Uredite povezavo vira za nadgradnjo."
 
 msgid "Education/Science/..."
@@ -5331,14 +5331,14 @@ msgstr "Prejšnje nastavitve"
 msgid "Last speed"
 msgstr "Zadnja hitrost"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Zadnja nadgradnja: "
 
 msgid "Latest Commits"
 msgstr "Zadnje spremembe"
 
 #, fuzzy
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Prikaz zadnjega dnevnika nadgradnje"
 
 #
@@ -6535,7 +6535,7 @@ msgstr ""
 msgid "Overscan wizard"
 msgstr ""
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr "Prepis nastavitvenih datotek pri nadgradnji programske opreme?"
 
 msgid "Overwrite configuration files?"
@@ -7490,10 +7490,10 @@ msgstr "Res želite izklopiti sprejemnik?"
 msgid "Really store at index %2d for current position?"
 msgstr ""
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Resnično želite nadgraditi frontprocessor in ponovno zagnati sprejemnik?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Res želite nadgraditi sprejemnik in ga ponovno zagnati?"
 
 #
@@ -8575,11 +8575,11 @@ msgid "Select the virtual keyboard shifted character set for the next character 
 msgstr ""
 
 #
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr "Izberite vir nadgradnje"
 
 #
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "Izberite vir, ki ga boste urejali."
 
 #
@@ -9034,7 +9034,7 @@ msgstr "Prikaz info. vrstice med preskakovanjem naprej/nazaj"
 msgid "Show latest commits"
 msgstr "Prikaz zadnjih OpenPLi sprememb"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Prikaz zadnjega dnevnika nadgradnje"
 
 msgid "Show menu or plugin numbers"
@@ -9069,7 +9069,7 @@ msgstr ""
 msgid "Show notification when import channels was successful"
 msgstr ""
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Prikaz paketov, ki bodo nadgrajeni"
 
 msgid "Show picons in channel selection list"
@@ -10862,7 +10862,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr ""
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -10992,7 +10992,7 @@ msgid "Updating software catalog"
 msgstr "Poteka posodabljanje kataloga programov ..."
 
 #
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Nadgrajujem"
 
 msgid "Upper case"
@@ -11527,7 +11527,7 @@ msgstr ""
 msgid "What type of service scan do you want?"
 msgstr ""
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr ""
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -11983,7 +11983,7 @@ msgid "Your current collection will get lost!"
 msgstr "Vašo trenutno zbirko boste izgubili!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
