--- a/po/id.po
+++ b/po/id.po
@@ -43,7 +43,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Ubah alamat sumber peningkatan."
@@ -3002,7 +3002,7 @@ msgstr "Anda ingin memperbarui rx anda ke %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Anda ingin memperbarui rx anda?"
 
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Anda ingin menaiktingkatkan paket:\n"
 
 msgid "Dolby"
@@ -3033,8 +3033,8 @@ msgid "Done"
 msgstr ""
 
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Selesai - Terpasang, dinaiktingkatkan atau dihapus %d paket (%s)"
 msgstr[1] "Selesai - Terpasang, dinaiktingkatkan atau dihapus %d paket (%s)"
 
@@ -3141,8 +3141,8 @@ msgstr "Ubah pewaktu"
 msgid "Edit title"
 msgstr "Ubah judul"
 
-msgid "Edit upgrade source url."
-msgstr "Ubah url sumber upgrade."
+msgid "Edit update source url."
+msgstr "Ubah url sumber update."
 
 msgid "Education/Science/..."
 msgstr "Edukasi/Sains/..."
@@ -4738,14 +4738,14 @@ msgstr "Pengaturan terakhir"
 msgid "Last speed"
 msgstr "Kecepatan terakhir"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Peningkatan terakhir: "
 
 msgid "Latest Commits"
 msgstr "Pengerjaan Terbaru"
 
 #, fuzzy
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Log peningkatan terbaru: "
 
 msgid "Latitude"
@@ -5786,8 +5786,8 @@ msgstr "Kemajuan keseluruhan"
 msgid "Overscan wizard"
 msgstr "Wizard overscan"
 
-msgid "Overwrite configuration files during software upgrade?"
-msgstr "Timpa file konfigurasi saat upgrade perangkat lunak?"
+msgid "Overwrite configuration files during software update?"
+msgstr "Timpa file konfigurasi saat update perangkat lunak?"
 
 msgid "Overwrite configuration files?"
 msgstr "Timpa file konfigurasi?"
@@ -6594,10 +6594,10 @@ msgstr "Yakin ingin mematikan rx sekarang?"
 msgid "Really store at index %2d for current position?"
 msgstr "Yakin menyimpan pada indeks %2d untuk posisi sekarang?"
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Yakin meningkatkan frontprosessor dan reboot sekarang?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Yakin meningkatkan Rx anda dan reboot sekarang?"
 
 msgid "Reboot"
@@ -7526,11 +7526,11 @@ msgstr "Pilih set karakter geser pada papankunci virtual"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Pilih set karakter geser pada papankunci virtual"
 
-msgid "Select upgrade source"
-msgstr "Pilih sumber upgrade"
+msgid "Select update source"
+msgstr "Pilih sumber update"
 
-msgid "Select upgrade source to edit."
-msgstr "Pilih sumber upgrade untuk diubah."
+msgid "Select update source to edit."
+msgstr "Pilih sumber update untuk diubah."
 
 msgid "Select video input with up/down buttons"
 msgstr "Pilih input video dengan tombol up/down"
@@ -7925,7 +7925,7 @@ msgstr "Tampilkan infobar pada lewati ke depan/ke belakang "
 msgid "Show latest commits"
 msgstr "Tampilkan pengerjaan terbaru"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Tampilkan log peningkatan terbaru"
 
 msgid "Show menu or plugin numbers"
@@ -7958,7 +7958,7 @@ msgstr "Tampilkan pemberitahuan saat impor kanal tidak berhasil"
 msgid "Show notification when import channels was successful"
 msgstr "Tampilkan pemberitahuan saat impor kanal berhasil"
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Tampilkan paket-paket untuk ditingkatkan"
 
 msgid "Show picons in channel selection list"
@@ -9552,7 +9552,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr "Tidak bisa menyetel direktori yang diperlukan pada media (misalnya USB flashdisk) - Mohon periksa media lau coba lagi!"
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -9671,7 +9671,7 @@ msgstr "Umpan pembaruan tidak tersedia."
 msgid "Updating software catalog"
 msgstr "Memperbarui katalog perangkat lunak"
 
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Meningkatkan"
 
 msgid "Upper case"
@@ -10137,7 +10137,7 @@ msgstr "Sahara Barat"
 msgid "What type of service scan do you want?"
 msgstr "Jenis pelacakan layanan apa yg anda inginkan?"
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Ketika diaktifkan enigma2 akan memuat buket pengguna yg tak terhubung. Ini berarti bahwa buket pengguna yg tersedia, tapi tidak disertakan dalam file bouquets.tv atau bouquets.radio, akan tetap dimuat. Ini memungkinkan anda misalnya untuk menyimpan buket pengguna anda sendiri sementara pengaturan yg terpasang sedang ditingkatkan"
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -10578,7 +10578,7 @@ msgid "Your current collection will get lost!"
 msgstr "Koleksi anda saat ini akan hilang!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
