--- a/po/lv.po
+++ b/po/lv.po
@@ -45,7 +45,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Rediģēt atjaunināšanas avota adresi."
@@ -2959,7 +2959,7 @@ msgstr "Vai vēlaties atjaunot uztvērēju uz %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Vai vēlaties atjaunot uztvērēju?"
 
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Vai vēlaties atjaunināt pakotni:\n"
 
 msgid "Dolby"
@@ -2990,8 +2990,8 @@ msgid "Done"
 msgstr ""
 
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Pabeigts - instalēta, atjaunināta vai dzēsta %d pakotne (%s)"
 msgstr[1] "Pabeigts - instalētas, atjauninātas vai dzēstas %d pakotnes (%s)"
 msgstr[2] "Pabeigts - instalētas, atjauninātas vai dzēstas %d pakotnes (%s)"
@@ -3095,7 +3095,7 @@ msgstr "Rediģēt taimeri"
 msgid "Edit title"
 msgstr "Rediģēt nosaukumu"
 
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "Rediģēt atjaunināšanas avota adresi."
 
 msgid "Education/Science/..."
@@ -4651,13 +4651,13 @@ msgstr "Pēdējie iestatījumi"
 msgid "Last speed"
 msgstr "Pēdējais ātrums"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Pēdējā atjaunošana: "
 
 msgid "Latest Commits"
 msgstr "Izmaiņas"
 
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Pēdējās atjaunošanas žurnāls"
 
 msgid "Latitude"
@@ -5677,7 +5677,7 @@ msgstr "Izpilda:"
 msgid "Overscan wizard"
 msgstr "Attēla vednis"
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr "Pārrakstīt konfigurācijas failus atjauninot programmatūru?"
 
 msgid "Overwrite configuration files?"
@@ -6470,10 +6470,10 @@ msgstr "Vai tiešām izslēgt?"
 msgid "Really store at index %2d for current position?"
 msgstr "Vai tiešām saglabāt numuru %2d pašreizējai pozīcijai?"
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Vai tiešām atjaunot frontprocesoru un pārstartēt tagad?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Vai tiešām atjaunot uztvērēju un pārstartēt tagad?"
 
 msgid "Reboot"
@@ -7381,10 +7381,10 @@ msgstr "Izvēlieties virtuālās tastatūras speciālo izkārtojumu"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Izvēlieties virtuālās tastatūras speciālo izkārtojumu"
 
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr "Izvēlieties atjaunināšanas avotu"
 
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "Izvēlieties atjaunināšanas avotu lai rediģētu."
 
 msgid "Select video input with up/down buttons"
@@ -7771,7 +7771,7 @@ msgstr "Rādīt infojoslu pārlēciena turp/atpakaļ laikā"
 msgid "Show latest commits"
 msgstr "Parādīt jaunākās izmaiņas"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Rādīt pēdējās atjaunošanas žurnālu"
 
 msgid "Show menu or plugin numbers"
@@ -7804,7 +7804,7 @@ msgstr "Parādīt brīdinājumu kad imports nav izdevies"
 msgid "Show notification when import channels was successful"
 msgstr "Parādīt brīdinājumu kad imports ir izdevies"
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Parādīt paketes kuras tiks atjaunotas"
 
 msgid "Show picons in channel selection list"
@@ -9366,7 +9366,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr "Nevarēja izveidot nepieciešamās direktorijas datu nesējā (USB zibatmiņā vai HDD). Pārbaudiet datu nesēju un mēģiniet vēlreiz!"
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -9480,7 +9480,7 @@ msgstr "Barotnes nav pieejamas."
 msgid "Updating software catalog"
 msgstr "Atjauno programmatūras katalogu"
 
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Atjauno"
 
 msgid "Upper case"
@@ -9939,7 +9939,7 @@ msgstr "Rietumsahāra"
 msgid "What type of service scan do you want?"
 msgstr "Kāda veida kanālu meklēšanu vēlaties veikt?"
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Ja ieslēgts, enigma ielādēs neiekļautās buķetes. Tas nozīmē ka buķetes tiek izmantotas, bet nav iekļautas bouquets.tv vai bouquets.radio failos. Tas atļauj saglabāt jūsu individuālās buķetes ja tiek atjaunoti uzstādījumi."
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -10370,7 +10370,7 @@ msgid "Your current collection will get lost!"
 msgstr "Jūsu pašreizējā kolekcija zudīs!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
