--- a/po/nb.po
+++ b/po/nb.po
@@ -48,7 +48,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Rediger kildeadressen for oppdateringen."
@@ -3257,7 +3257,7 @@ msgid "Do you want to update your receiver?"
 msgstr "Oppdatere mottakeren?"
 
 #
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Oppdatere pakken:\n"
 
 msgid "Dolby"
@@ -3291,8 +3291,8 @@ msgstr "Utført"
 
 #
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Ferdig - Installert, oppdatert eller slettet %d pakke (%s)"
 msgstr[1] "Ferdig - Installert, oppdatert eller slettet %d pakker (%s)"
 
@@ -3407,7 +3407,7 @@ msgstr "Rediger timer"
 msgid "Edit title"
 msgstr "Rediger overskrift"
 
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "Rediger kilden til internettadresse."
 
 msgid "Education/Science/..."
@@ -5138,13 +5138,13 @@ msgstr "Siste innstilling"
 msgid "Last speed"
 msgstr "Siste hastighet"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Siste oppdatering: "
 
 msgid "Latest Commits"
 msgstr "Siste nytt"
 
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Siste oppdaterings logg"
 
 #
@@ -6290,7 +6290,7 @@ msgstr "Liten framdriftsbar:"
 msgid "Overscan wizard"
 msgstr "Veiviser for ekte bildestørrelse"
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr "Overskrive konfigurerte filer under programvareoppdateringen?"
 
 #
@@ -7195,10 +7195,10 @@ msgstr "Slå av nå?"
 msgid "Really store at index %2d for current position?"
 msgstr "Lagre ved index %2d for denne posisjon?"
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Er du sikker på at du vil oppdatere frontprosessoren og starte på nytt?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Skal mottakeren oppdateres og starte på nytt nå?"
 
 msgid "Reboot"
@@ -8203,10 +8203,10 @@ msgstr "Velg virtuell tastaturs shift tegnsett"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Velg det virtuelle tastaturs tegnoppsett bare for neste tegn"
 
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr "Velg oppdateringssted"
 
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "Rediger oppdateringssted."
 
 msgid "Select video input with up/down buttons"
@@ -8633,7 +8633,7 @@ msgstr "Vis infobar ved spoling framover/bakover"
 msgid "Show latest commits"
 msgstr "Vis siste nytt"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Vis siste oppdaterings logg"
 
 #
@@ -8669,7 +8669,7 @@ msgstr "Vis et varsel når import av kanaler mislyktes"
 msgid "Show notification when import channels was successful"
 msgstr "Vis et varsel når import av kanaler ble vellykket"
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Vis oppdateringer"
 
 msgid "Show picons in channel selection list"
@@ -10415,7 +10415,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr "Kan ikke opprette de nødvendige katalogene på mediet (for eksempel USB-pinne eller harddisk)-kontroller media og prøv igjen!"
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -10539,7 +10539,7 @@ msgid "Updating software catalog"
 msgstr "Oppdaterer programvarekatalog"
 
 #
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Oppdaterer"
 
 msgid "Upper case"
@@ -11041,7 +11041,7 @@ msgstr "Vest Sahara"
 msgid "What type of service scan do you want?"
 msgstr "Hvilken type kanalsøk vil du bruke?"
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Når dette er på, vil enigma2 laste kanallister som ikke er tilknyttet mottakeren. Dette kan være kanallister som er tilgjengelig, men ikke tilknyttet radio eller tv kanallistene for mottakeren. Dette tillater at du kan lagre for eksempel egne favorittlister mens oppgradering av innstillingene pågår"
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -11493,7 +11493,7 @@ msgid "Your current collection will get lost!"
 msgstr "Din nåværende samling vil gå tapt!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
