--- a/po/vi.po
+++ b/po/vi.po
@@ -43,7 +43,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Chỉnh sửa địa chỉ nguồn nâng cấp."
@@ -2950,7 +2950,7 @@ msgstr "Bạn có muốn cập nhật đầu thu của mình lên%s không?"
 msgid "Do you want to update your receiver?"
 msgstr "Bạn có muốn cập nhật đầu thu của bạn?"
 
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Bạn có muốn nâng cấp gói:\n"
 
 msgid "Dolby"
@@ -2981,8 +2981,8 @@ msgid "Done"
 msgstr "Làm xong"
 
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Xong - Đã cài đặt, nâng cấp hoặc gỡ bỏ gói%d (%s)"
 msgstr[1] "Xong - Đã cài đặt, nâng cấp hoặc gỡ bỏ gói%d (%s)"
 
@@ -3084,7 +3084,7 @@ msgstr "Chỉnh sửa bộ đếm thời gian"
 msgid "Edit title"
 msgstr "Chỉnh sửa tiêu đề"
 
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "Chỉnh sửa url nguồn nâng cấp."
 
 msgid "Education/Science/..."
@@ -4637,13 +4637,13 @@ msgstr "Cấu hình cuối cùng"
 msgid "Last speed"
 msgstr "Tốc độ cuối"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Nâng cấp lần cuối: "
 
 msgid "Latest Commits"
 msgstr "Cam kết mới nhất"
 
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Nhật ký nâng cấp mới nhất"
 
 msgid "Latitude"
@@ -5657,7 +5657,7 @@ msgstr "Tiến độ tổng thể:"
 msgid "Overscan wizard"
 msgstr "Overscan wizard"
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr "Ghi đè tập tin cấu hình trong quá trình nâng cấp phần mềm?"
 
 msgid "Overwrite configuration files?"
@@ -6448,10 +6448,10 @@ msgstr "Thực sự tắt máy bây giờ?"
 msgid "Really store at index %2d for current position?"
 msgstr "Thực sự lưu trữ ở chỉ số %2d cho vị trí hiện tại?"
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Thực sự nâng cấp bộ xử lý trước và khởi động lại bây giờ?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Thực sự nâng cấp hộp giải quyết của bạn và khởi động lại bây giờ?"
 
 msgid "Reboot"
@@ -7354,10 +7354,10 @@ msgstr "Chọn bộ ký tự dịch chuyển bàn phím ảo"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Chọn bộ ký tự dịch chuyển bàn phím ảo cho chỉ ký tự tiếp theo"
 
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr "Chọn nguồn nâng cấp"
 
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "Chọn nguồn nâng cấp để chỉnh sửa."
 
 msgid "Select video input with up/down buttons"
@@ -7744,7 +7744,7 @@ msgstr "Hiển thị infobar khi bỏ qua tiến / lùi"
 msgid "Show latest commits"
 msgstr "Hiển thị các cam kết mới nhất"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Hiển thị nhật ký nâng cấp mới nhất"
 
 msgid "Show menu or plugin numbers"
@@ -7777,7 +7777,7 @@ msgstr "Hiển thị thông báo khi các kênh nhập không thành công"
 msgid "Show notification when import channels was successful"
 msgstr "Hiển thị thông báo khi các kênh nhập khẩu thành công"
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Hiển thị các gói sẽ được nâng cấp"
 
 msgid "Show picons in channel selection list"
@@ -9337,7 +9337,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr "Không thể tạo các thư mục cần thiết trên phương tiện (ví dụ: thẻ nhớ USB hoặc Ổ cứng) - Vui lòng xác minh phương tiện và thử lại!"
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -9450,7 +9450,7 @@ msgstr "Cập nhật nguồn cấp dữ liệu không có sẵn."
 msgid "Updating software catalog"
 msgstr "Cập nhật danh mục phần mềm"
 
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Nâng cấp"
 
 msgid "Upper case"
@@ -9909,7 +9909,7 @@ msgstr "Phía tây Sahara"
 msgid "What type of service scan do you want?"
 msgstr "Bạn muốn loại dịch vụ quét nào?"
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Khi được bật enigma2 sẽ tải các tập tin người dùng không liên kết. Điều này có nghĩa là các userbouquets có sẵn, nhưng không được bao gồm trong các tập tin bouquets.tv hoặc bouquets.radio, vẫn sẽ được tải. Điều này cho phép bạn lấy ví dụ để giữ bó hoa người dùng của riêng bạn trong khi cài đặt được cài đặt được nâng cấp"
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -10339,7 +10339,7 @@ msgid "Your current collection will get lost!"
 msgstr "Bộ sưu tập hiện tại của bạn sẽ bị mất!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
