--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -41,7 +41,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "编辑升级源地址。"
@@ -2937,7 +2937,7 @@ msgstr ""
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr " 是否升级软件包:\n"
 
 msgid "Dolby"
@@ -2968,8 +2968,8 @@ msgid "Done"
 msgstr ""
 
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -3077,7 +3077,7 @@ msgstr ""
 msgid "Edit title"
 msgstr "修改标题"
 
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "修改升级源地址."
 
 msgid "Education/Science/..."
@@ -4628,14 +4628,14 @@ msgstr "上次配置"
 msgid "Last speed"
 msgstr "上次速度"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr ""
 
 msgid "Latest Commits"
 msgstr ""
 
 #, fuzzy
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "上次升级:"
 
 msgid "Latitude"
@@ -5669,7 +5669,7 @@ msgstr ""
 msgid "Overscan wizard"
 msgstr ""
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr ""
 
 msgid "Overwrite configuration files?"
@@ -6472,10 +6472,10 @@ msgstr "立即关机?"
 msgid "Really store at index %2d for current position?"
 msgstr ""
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr ""
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr ""
 
 msgid "Reboot"
@@ -7398,10 +7398,10 @@ msgstr ""
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr ""
 
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr ""
 
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "选泽升级源进行编辑."
 
 msgid "Select video input with up/down buttons"
@@ -7794,7 +7794,7 @@ msgstr "快退 / 快进时显示信息条"
 msgid "Show latest commits"
 msgstr ""
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr ""
 
 msgid "Show menu or plugin numbers"
@@ -7827,7 +7827,7 @@ msgstr ""
 msgid "Show notification when import channels was successful"
 msgstr ""
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr ""
 
 msgid "Show picons in channel selection list"
@@ -9358,7 +9358,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr ""
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -9471,7 +9471,7 @@ msgstr "更新资源无效"
 msgid "Updating software catalog"
 msgstr ""
 
-msgid "Upgrading"
+msgid "Updating"
 msgstr "升级"
 
 msgid "Upper case"
@@ -9916,7 +9916,7 @@ msgstr ""
 msgid "What type of service scan do you want?"
 msgstr ""
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr ""
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -10333,7 +10333,7 @@ msgid "Your current collection will get lost!"
 msgstr ""
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
